refactor(agentic-ai): remove AgentState.WAITING_FOR_TOOL_INPUT (#5108)
* refactor(agentic-ai): remove AgentState.WAITING_FOR_TOOL_INPUT as the strict state transition is not flexible enough

Relying on a previously set state makes it hard to handle in-between
data. Now when handling a response, the AI Agent decides which kind of
message to add based on the previous message in the history.

* refactor(agentic-ai): improve logging